objects/AuthorizationForm.object
<CustomObject>
    <fields>
        <fullName>Company_Website__c</fullName>
        <label>Company Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-Sign?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>